WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291757
permissions.getAll() is wrong if all hosts and URLs access was granted with implicit request
https://bugs.webkit.org/show_bug.cgi?id=291757
Summary
permissions.getAll() is wrong if all hosts and URLs access was granted with i...
Elijah Sawyers
Reported
2025-04-18 10:44:10 PDT
rdar://149249321
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-04-18 10:58:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44259
EWS
Comment 2
2025-04-18 14:24:07 PDT
Committed
293872@main
(0ea6caec83cb): <
https://commits.webkit.org/293872@main
> Reviewed commits have been landed. Closing PR #44259 and removing active labels.
EWS
Comment 3
2025-04-21 09:49:59 PDT
Committed
289651.447@safari-7621-branch
(43a348c2869e): <
https://commits.webkit.org/289651.447@safari-7621-branch
> Reviewed commits have been landed. Closing PR #3023 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug