permissions.getAll() is wrong if all hosts and URLs access was granted with implicit request https://bugs.webkit.org/show_bug.cgi?id=291757 rdar://149249321

Reviewed by Timothy Hatcher.

Fix a bug where permissions.getAll() doesn't return the all hosts and URLs match
pattern if access was granted through an implicit request.

To fix this, if none of the match patterns in the manifest match all hosts and
URLs, but access has been granted, return the match pattern.

Wrote a new test to validate the fix.

* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIPermissionsCocoa.mm:
(WebKit::WebExtensionContext::permissionsGetAll):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPIPermissions.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPIPermissions, ImplicitAllHostsAndURLsPermissions)):

Canonical link: https://commits.webkit.org/293872@main