Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIPermissionsCocoa.mm
@@ -69,11 +69,18 @@ void WebExtensionContext::permissionsGetAll(CompletionHandler<void(Vector<String
 
     if (hasGrantedAccessToAllURLsOrHosts) {
         auto combinedPermissionMatchPatterns = protectedExtension()->combinedPermissionMatchPatterns();
+        bool appendedMatchAllURLsOrHostsPattern = false;
 
         for (auto& matchPattern : combinedPermissionMatchPatterns) {
-            if (matchPattern->matchesAllHosts())
+            if (matchPattern->matchesAllHosts()) {
                 origins.append(matchPattern->string());
+                appendedMatchAllURLsOrHostsPattern = true;
+            }
         }
+
+        // If we don't have the all URLs and hosts match pattern(s) in the manifest, access was requested implicitly (tabs, web navigation, etc.).
+        if (!appendedMatchAllURLsOrHostsPattern)
+            origins.append(WebExtensionMatchPattern::allHostsAndSchemesMatchPattern()->string());
     }
 
     completionHandler(WTFMove(permissions), WTFMove(origins));
